<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_meeting_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    tools:context=".ui.meeting_list.addmeet.AddMeetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/add_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_margin"
            app:srcCompat="@drawable/ic_return_24" />

        <TextView
            android:id="@+id/add_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/add_margin"
            android:text="@string/add_title"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/title_size"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_nameLyt"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_meeting_subject_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Sujet Réunion"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/meeting_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_view_padding_land"
            android:text="@string/infoAddDateTimeToMeeting"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center">
                <Button
                    android:id="@+id/date_selector_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/add_margin"
                    android:padding="@dimen/add_margin"
                    android:background="@drawable/mybutton"
                    android:backgroundTint="@android:color/transparent"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/add_margin"
                    app:tint="@color/colorPrimary"
                    android:src="@drawable/ic_baseline_calendar_today_24"
                    android:layout_gravity="center"
                    android:scaleX="1.5"
                    android:scaleY="1.5"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/add_margin"
                    android:src="@drawable/ic_baseline_access_time_24"
                    android:layout_gravity="center"
                    app:tint="@color/colorPrimary"
                    android:scaleX="1.5"
                    android:scaleY="1.5"/>

                <Button
                android:id="@+id/time_selector_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/add_margin"
                android:backgroundTint="@android:color/transparent"
                android:padding="@dimen/add_margin" android:background="@drawable/mybutton"/>

            </FrameLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/meeting_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_margin"
            android:textAlignment="center"
            android:text="@string/room"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/title_size"/>

        <Spinner
            android:id="@+id/roomSpinner_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/add_margin"
            android:layout_marginEnd="@dimen/add_margin" />

        <TextView
            android:id="@+id/contributor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_margin"
            android:text="@string/contributor"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/title_size"/>

        <Button
            android:id="@+id/contributor_selector_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_margin"
            android:background="@drawable/mybutton"
            android:clickable="true"
            android:text="@string/select_contributor"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            app:cornerRadius="20dp"
            />

        <TextView
            android:id="@+id/list_contributor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_margin"
            android:hint="toto@lamzone.com"
            android:textAlignment="center"
            android:textSize="@dimen/text_size"
            android:visibility="gone" />

        <Button
            android:id="@+id/add_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/add_margin"
            android:background="@drawable/mybutton"
            android:text="@string/save"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>
</ScrollView>