...
            android:layout_height="match_parent"
            android:scrollbars="vertical" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_meeting_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/add_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
...
